# DREAM

./: DREAM_ROOT.ini  README.md  manager-DREAM.bat  restart-SANDTRAY.bat  run-DREAM.bat  run-INTERVENTION.bat  stop-INTERVENTION.bat  ymanager.ini
release/: CMakeLists.txt  DREAMConfig.cmake
release/app/: DREAM.json  DREAM.xml  sandtrayModules.xml  systemArchitectureTEST.xml
release/components/: CMakeLists.txt
release/components/actuationSubsystem/: CMakeLists.txt
release/components/actuationSubsystem/app/: README.txt  actuationSubWP6TEST.xml  actuationSubsystemTEST.xml
release/components/actuationSubsystem/config/: actuationSubsystem.ini
release/components/actuationSubsystem/src/: actuationSubsystem.h  actuationSubsystemComputation.cpp  actuationSubsystemConfiguration.cpp  actuationSubsystemController.cpp  actuationSubsystemController.h  actuationSubsystemMain.cpp  actuationSubsystemYarpInterface.cpp  actuationSubsystemYarpInterface.h
release/components/assessChildEngagement/: CMakeLists.txt
release/components/assessChildEngagement/app/: README.txt  assessChildEngagementSensorTEST.xml  assessChildEngagementTEST.xml
release/components/assessChildEngagement/config/: assessChildEngagement.ini
release/components/assessChildEngagement/src/: assessChildEngagement.h  assessChildEngagementComputation.cpp  assessChildEngagementConfiguration.cpp  assessChildEngagementController.cpp  assessChildEngagementController.h  assessChildEngagementMain.cpp  assessChildEngagementYarpInterface.cpp  assessChildEngagementYarpInterface.h
release/components/assessChildPerformance/: CMakeLists.txt
release/components/assessChildPerformance/app/: README.txt  assessChildPerformanceTEST.xml  assessChildPerformanceTESTTrajectory.xml
release/components/assessChildPerformance/config/: assessChildPerformance.ini
release/components/assessChildPerformance/src/: assessChildPerformance.h  assessChildPerformanceComputation.cpp  assessChildPerformanceConfiguration.cpp  assessChildPerformanceController.cpp  assessChildPerformanceController.h  assessChildPerformanceMain.cpp  assessChildPerformanceYarpInterface.cpp  (+1 more)
release/components/attentionReactionSubsystem/: CMakeLists.txt
release/components/deliberativeSubsystem/: CMakeLists.txt
release/components/guiUtilities/: CMakeLists.txt  GUIUTILITIESConfig.cmake
release/components/naoInterface/: CMakeLists.txt
release/components/sandtrayEvent/: CMakeLists.txt
release/components/sandtrayServer/: CMakeLists.txt
release/components/selfMonitoringSubsystem/: CMakeLists.txt
release/components/sensoryAnalysis/: CMakeLists.VSPro.txt  CMakeLists.txt
release/components/systemGUI/: CMakeLists.txt
release/components/usbCameraSource/: CMakeLists.txt
release/components/userModel/: CMakeLists.txt
release/config/: sensoryInterpretationLogger.ini
release/doc/: readme.md
release/doc/component_doc/: _blob_operators_8h_source.html  _blob_result_8h_source.html  _component_labeling_8h_source.html  _dream_motion_8h_source.html  _dream_save_8h_source.html  _eye_localization_8h_source.html  _face_alignment_8h_source.html  _face_analysis_8h_source.html  _kinect_speech_8h_source.html  _kinectsdk_8h_source.html  _object_detection_8h_source.html  _object_tracker_8h_source.html  _resampler_util_8h_source.html  _sensory_analysis_show_8h_source.html  _view_g_l_c_8h_source.html  actuation_driver_8h.html  actuation_driver_controller_8h.html  actuation_driver_controller_8h_source.html  actuation_simulator_8h.html  actuation_subsystem_controller_8h.html  actuation_subsystem_controller_8h.js  actuation_subsystem_controller_8h_source.html  actuation_subsystem_yarp_interface_8h.html  annotated_dup.js  assess_child_engagement_8h.html  assess_child_engagement_controller_8h_source.html  assess_child_engagement_yarp_interface_8h.html  assess_child_engagement_yarp_interface_8h_source.html  assess_child_performance_controller_8h.html  assess_child_performance_controller_8h_source.html  assess_child_performance_yarp_interface_8h.html  assess_child_performance_yarp_interface_8h_source.html  attention_reaction_controller_8h.html  attention_reaction_system_g_u_i_8h.html  attention_reaction_system_g_u_i_8h.js  attention_reaction_yarp_interface_8cpp.html  attention_system_8h.html  attention_system_8h_source.html  blob_8h_source.html  camera_selection_2src_2_face_analysis_8h_source.html  (+672 more)
release/doc/doxygen_config/: Doxyfile
release/include/: actionMessages.h  actionOrigin.h  commonFonctionalities.h  feedbackMessages.h  moveSequenceId.h  naoMessages.h  performanceMessages.h  sandtrayMessages.h  scriptManagerLibrary.h  scriptMessages.h  userDataLibrary.h  userListLibrary.h  waiter.h
release/include/intraface/: FaceAlignment.h  XXDescriptor.h
release/lib/: freeglut.lib
release/test/: CMakeLists.txt
release/test/actuationDriver/: CMakeLists.txt
release/test/actuationSimulator/: CMakeLists.txt
release/test/assessChildEngagementDriver/: CMakeLists.txt
release/test/assessChildPerformanceDriver/: CMakeLists.txt
release/test/attentionReactionSystemGUI/: CMakeLists.txt
release/test/childBehaviourClassification/: CMakeLists.txt
release/test/cognitiveControl/: CMakeLists.txt
release/test/deliberativeDriver/: CMakeLists.txt
release/test/heartbeat/: CMakeLists.txt
release/test/imageSource/: CMakeLists.txt
release/test/naoInterfaceDriver/: CMakeLists.txt
release/test/protoComponent/: CMakeLists.txt
release/test/protoComponentGUI/: CMakeLists.txt
release/test/reactiveSystemGUI/: CMakeLists.txt
release/test/sandtrayServerDriver/: CMakeLists.txt
release/test/scriptManagerDriver/: CMakeLists.txt
release/test/selfMonitoringDriver/: CMakeLists.txt
release/test/sensoryInterpretation/: CMakeLists.txt
release/test/sensoryInterpretationLogger/: CMakeLists.txt
release/test/systemArchitectureGUI/: CMakeLists.txt
release/test/systemGUIDriver/: CMakeLists.txt
release/test/userModelDriver/: CMakeLists.txt
release/test/videoSource/: CMakeLists.txt
release/test/wp3Stub/: CMakeLists.txt
release/test/wp5Stub/: CMakeLists.txt
(+1026 files in other folders)
