# Main DREAM architecture components ... in alphbetical order
ADD_SUBDIRECTORY(actuationSubsystem)
ADD_SUBDIRECTORY(assessChildEngagement)
ADD_SUBDIRECTORY(assessChildPerformance)
ADD_SUBDIRECTORY(attentionReactionSubsystem)
ADD_SUBDIRECTORY(deliberativeSubsystem)
ADD_SUBDIRECTORY(guiUtilities)
ADD_SUBDIRECTORY(naoInterface)
ADD_SUBDIRECTORY(sandtrayEvent)
ADD_SUBDIRECTORY(sandtrayServer)
ADD_SUBDIRECTORY(selfMonitoringSubsystem)
ADD_SUBDIRECTORY(sensoryAnalysis)
ADD_SUBDIRECTORY(systemGUI)
ADD_SUBDIRECTORY(usbCameraSource)
ADD_SUBDIRECTORY(userModel)



