# Test components ... in alphbetical order
ADD_SUBDIRECTORY(actuationDriver)
ADD_SUBDIRECTORY(actuationSimulator)
ADD_SUBDIRECTORY(assessChildEngagementDriver)
ADD_SUBDIRECTORY(assessChildPerformanceDriver)
ADD_SUBDIRECTORY(attentionReactionSystemGUI)
ADD_SUBDIRECTORY(childBehaviourClassification)
ADD_SUBDIRECTORY(cognitiveControl)
ADD_SUBDIRECTORY(deliberativeDriver)
ADD_SUBDIRECTORY(heartbeat)
ADD_SUBDIRECTORY(imageSource)
ADD_SUBDIRECTORY(naoInterfaceDriver)
ADD_SUBDIRECTORY(protoComponent)
ADD_SUBDIRECTORY(protoComponentGUI)
ADD_SUBDIRECTORY(reactiveSystemGUI)
ADD_SUBDIRECTORY(sandtrayServerDriver)
ADD_SUBDIRECTORY(scriptManagerDriver)
ADD_SUBDIRECTORY(selfMonitoringDriver)
ADD_SUBDIRECTORY(sensoryInterpretation)
ADD_SUBDIRECTORY(sensoryInterpretationLogger)
ADD_SUBDIRECTORY(systemArchitectureGUI)
ADD_SUBDIRECTORY(systemGUIDriver)
ADD_SUBDIRECTORY(userModelDriver)
ADD_SUBDIRECTORY(videoSource)
ADD_SUBDIRECTORY(wp3Stub)
ADD_SUBDIRECTORY(wp5Stub)
