CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(MODULENAME videoSource)
PROJECT(${MODULENAME})

find_package(qibuild)
FIND_PACKAGE(YARP)
#FIND_PACKAGE(OPENCV)

INCLUDE_DIRECTORIES(${YARP_INCLUDE_DIRS} ${OpenCV_INCLUDE_DIRS})

SET(CMAKE_MODULE_PATH ${YARP_MODULE_PATH} ${CMAKE_MODULE_PATH})

FILE(GLOB folder_source src/videoSourceMain.cpp src/videoSourceConfiguration.cpp src/videoSourceComputation.cpp)
FILE(GLOB folder_header src/videoSource.h)

SOURCE_GROUP("Source Files" FILES ${folder_source})
SOURCE_GROUP("Header Files" FILES ${folder_header})

ADD_EXECUTABLE(${MODULENAME} ${folder_source} ${folder_header})

qi_use_lib(${MODULENAME} OPENCV2_CALIB3D OPENCV2_CONTRIB OPENCV2_CORE OPENCV2_FEATURES2D OPENCV2_FLANN OPENCV2_GPU OPENCV2_HIGHGUI OPENCV2_GPU OPENCV2_IMGPROC OPENCV2_ML OPENCV2_NONFREE OPENCV2_OBJDETECT OPENCV2_TS OPENCV2_VIDEO) 

TARGET_LINK_LIBRARIES(${MODULENAME} ${YARP_LIBRARIES})

INSTALL(TARGETS ${MODULENAME} DESTINATION bin) 

